# rag-quality-gate-demo

./: .gitignore  LICENSE  README.md  pyproject.toml
docs_source/internship_application_documentation_assistant_md_pack/: common_mistakes.md  internship_eligibility.md  interview_preparation.md  project_submission_rules.md  resume_guidelines.md
docs_source/internship_docs/: README.md  application_process.md  contact_escalation_flow.md  deadline_policy.md  faq.md
eval_dataset/golden_evaluation_dataset_internship_docs/: golden_eval_dataset.csv  golden_eval_dataset.jsonl  golden_eval_dataset.md  golden_eval_dataset.xlsx
experiments/noisy_retrieval/noise_docs/: 01_company_code_of_conduct.md  02_remote_work_policy.md  03_ai_tools_usage_policy.md  04_data_security_policy.md  05_leave_and_attendance_policy.md  06_expense_reimbursement_policy.md  07_device_and_internet_usage_policy.md  08_incident_reporting_policy.md  README.md
