[project]
name = "rag-quality-gate-demo"
version = "0.1.0"
description = "A RAG documentation QA assistant with Ragas-powered CI quality gates for detecting retrieval and generation regressions."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "faiss-cpu>=1.8,<2",
    "langchain>=0.2,<0.3",
    "langchain-community>=0.2.15,<0.3",
    "langchain-core>=0.2,<0.3",
    "langchain-openai>=0.1,<0.2",
    "numpy>=1.26,<2",
    "pandas>=2.2,<3",
    "python-dotenv>=1.0",
    "ragas==0.4.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]